Add owned behavior boundaries and transport journeys